# arcanoid

./: .gitignore  CMakeLists.txt  Makefile
src/: gamecore.cpp  gamecore.hpp  main.cpp
